# diagnosis_ai

./: .gitignore  LICENSE.txt  README.md  progress_training_info.txt  requirements.txt  setup.cfg  structure_info.txt
config/: classification_config.json  segmentation_config.json
datasets/: dataset_info.txt
examples/: binary_3d_eval323232.ipynb  binary_3d_eval646464.ipynb  binary_slices_eval.ipynb  brain_dataset_info.ipynb  brain_dp.ipynb  brain_slices_seg.ipynb  brains_3d_visualization.ipynb  classif3d_eval.ipynb  classification_pipeline_usage.ipynb  segmentation_pipeline_usage.ipynb
examples/datasets_notebooks_info/: brain_dataset_info.ipynb  orgamnist_dataset_info.ipynb
src/: brain_slices.ipynb  brains_3d.ipynb  save_brain_slices.py  split_chest_dt_categories.py
src/DiagnosisAI/: custom_loss.py  functionals.py  nn_datasets.py
src/DiagnosisAI/custom_metrics/: dice_loss.py
src/DiagnosisAI/datasets_torch/: brain_3d_dataset.py  brain_slices_dataset.py  chest_dataset.py
src/DiagnosisAI/lightining_modules/: binary_slices_segment.py  chest_model.py  classif_3d.py
src/DiagnosisAI/metrics/: segmentation.py
src/DiagnosisAI/models/: AutoEncoder_BRAIN.py  AutoEncoder_BRAIN_UNET.py  BrainSegNet.py  Unet3D.py  Unet3D_fromgit.py  Unet_self_written.py  _encoders.py  resnet2d.py  resnet3d.py  unet2d.py  unet3d.py
src/DiagnosisAI/pipelines/: __init__.py  classification_pipe.py  segmentation_pipe.py
src/DiagnosisAI/utils/: data_processing.py  functionals.py  metrics.py  save_slice_max_tumor_area.py  split_lungs_rtg_labels.py  (+2 more)
tests/: binary_3d_eval323232.ipynb  binary_3d_eval646464.ipynb  binary_slices_eval.ipynb  chest_eval_resnet50.ipynb  classif3d_eval.ipynb  classif_3d_brats.ipynb
trainings/: binary_seg_3d.py  binary_slices.py  chest_train.py  classif3d_training.py
(+18 files in other folders)
