[metadata]
name = DiagnosisAI
version = 0.0.1
author = Mheit
author-email = michal.heit@student.put.poznan.pl
description = Match patients with similar images and select a diagnosis
long_description  = file: README.md

classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
python_requires = >=3.8
install_requires =
    tqdm
    pytorch-lightning<1.6
    torchmetrics
    torch
    torchvision
    torchaudio
    numpy
    sklearn
    matplotlib
    pandas
    ipykernel
    plotly
    nipy
    pillow<9
    segmentation-models-pytorch == 0.2.1
    albumentations
    medmnist
    plotly
    kaleido

package_dir = 
    =src
packages=find:


[options.packages.find]
where=src

[options.extras_require]
testing = pytest>=6.2.4
          pytest-cov