[metadata]
name = diagnosisai
version = 0.0.1
author = Michał Heit
author-email = michal.heit.contact@gmail.com
description = An application designed to help diagnose various medical conditions.
long_description  = file: README.md

classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
python_requires = >=3.9
install_requires =
    tqdm
    torchmetrics
    torch
    torchvision
    torchaudio
    tensorboard
    numpy
    sklearn
    matplotlib
    pandas
    ipykernel
    plotly
    nipy
    pillow<9
    segmentation-models-pytorch == 0.2.1
    albumentations
    medmnist
    plotly
    kaleido

package_dir = 
    =src
packages=find:


[options.packages.find]
where=src

[options.extras_require]
testing = pytest>=6.2.4
          pytest-cov
